src/defaults/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-app-name
spec:
  type: ClusterIP
  ports:
    - name: tcp
      port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: your-app-name
    tier: api
