src/defaults/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-app-name
spec:
  type: ClusterIP
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: your-app-name,
    tier: frontend
